# cmake-imagenes

./: CMakeLists.txt  config.hpp.cmake
ejemplos/: CMakeLists.txt  mostrar_imagen.cpp
guia_1/: CMakeLists.txt  ejercicio_1.cpp
